# damiao_motor_tui

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: HARDWARE_VALIDATION.md  ROADMAP.md  TESTING.md
src/dm_tui/: __init__.py  app.py  bus_manager.py  controllers.py  demos.py  discovery.py  logging.py  osutils.py  persistence.py
src/dm_tui/dmlib/: params.py  protocol.py
tests/: test_app.py  test_controllers.py  test_demos.py  test_discovery.py  test_logging.py  test_osutils.py  test_persistence.py  test_protocol.py
